bdr.BDR.scala.error
Compilation error:
BDR:1: error: unclosed character literal
var indic = ''
            ^BDR:1: error: illegal start of simple expression
var indic = ''
            ^